# menace-self-coding

./: README.md  alert_dispatcher.py  auto_link.py  chunk_summary_cache.py  chunking.py  context_builder.py  db_router.py  dynamic_path_router.py  governed_embeddings.py  gpt_memory_interface.py  knowledge_graph.py  manual_bootstrap.py  menace_memory_manager.py  prompt_failure.py  retry_utils.py  sandbox_settings.py  shared_gpt_memory.py  unified_event_bus.py
analysis/: __init__.py  semantic_diff_filter.py
config/: __init__.py
logs/refs/heads/: main
menace/: alert_dispatcher.py  auto_link.py  code_database.py  context_builder.py  db_router.py  internalize_coding_bot.py  knowledge_graph.py  prompt_failure.py  pyproject.toml  requirements.txt  retry_utils.py  sandbox_runner.py  sandbox_settings.py  scope_utils.py  self_coding_engine.py  unified_event_bus.py
menace/vector_service/: __init__.py
self_improvement/: __init__.py
vector_service/: __init__.py  context_builder.py
